build/rabbitmq-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: rabbitmq-ingress
spec:
   ingressClassName: nginx
   rules:
   - host: rabbitmq.myexample.com 
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: my-rabbit-rabbitmq
             port:
               number: 15672
