build/user-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: user-ingress
spec:
   ingressClassName: nginx
   rules:
   - host: user.myexample.com
     http:
       paths:       
       - path: /
         pathType: Prefix
         backend:
           service:
             name: userapi-service
             port:
               number: 80
